# C

./: README.md  test-opengl  test-opengl.c  weird-hello  weird-hello.c
xfce4-panel-plugins/myfirstplugin/: configure  configure.ac  makefile.am  myfirstplugin.c  myfirstplugin.desktop
xfce4-panel-plugins/myfirstplugin/autom4te.cache/: output.2  output.4  requests  traces.1  traces.2  traces.3  traces.4
xfce4-panel-plugins/myfirstplugin/doc/: makefile.am  makefile.in
xfce4-panel-plugins/myfirstplugin/examples/: makefile.am  makefile.in
xfce4-panel-plugins/myfirstplugin/man/: makefile.am
xfce4-panel-plugins/myfirstplugin/scripts/: makefile.am
xfce4-panel-plugins/myfirstplugin/src/: makefile.am
